arrow_btn changes

--- a/languages/es.json
+++ b/languages/es.json
@@ -39,7 +39,7 @@
     },
 
     "footer":{
-        "footer-up": "Subir 🔼",
+        "footer-up": "Subir",
         "link__git": "LINK DEL CÓDIGO"
     }
 
