--- a/languages/es.json
+++ b/languages/es.json
@@ -10,11 +10,10 @@
     "homes":{
        "profesion": "Desarrollador Web Full Stack"
     },
-
-    "acerca-de-mi":{
-        "acerca-de-mi__title":"Acerca de mí",
-        "description": "Tengo 30 años, he trabajado en proyectos en los que he aplicado mis conocimientos para desarrollar interfaces de usuario atractivas y receptivas utilizando HTML, CSS y JavaScript. Además, estoy familiarizado con el uso y bibliotecas y frameworks como React, que me permiten construir aplicaciones web dinámicas e interactivas. También me formé en el desarrollo del lado del servidor utilizando Node.js, donde he creado Apis y aplicaciones web completas. Me siento cómodo trabajando con bases de datos, implementando lógica empresarial y asegurando la seguridad de las aplicaciones. Disfruto enfrentando nuevos desafíos y colaborando en equipos multidiscilplinarios. Anterior a esto trabajé en el area de la ingeniería ambiental y docencia ejerciendo como profesor. "
-    },
+"acerca-de-mi": {
+    "acerca-de-mi__title": "Acerca de mí",
+    "description": "Soy un Desarrollador Web Full Stack de 32 años. He trabajado en proyectos donde he aplicado mis conocimientos para crear interfaces de usuario atractivas y responsivas empleando HTML, CSS y JavaScript.\n\nMi experiencia incluye el uso de librerías y frameworks como React para desarrollar aplicaciones web.\n\n En el backend, me especializo en Node.js, donde he desarrollado APIs y aplicaciones web completas, integrando bases de datos y aplicando lógica de negocio.\n\n Me aseguro de implementar las mejores prácticas de seguridad para garantizar la integridad de las aplicaciones.\n\n Actualmente, estoy cursando la Tecnicatura Universitaria en Programación en la Universidad Tecnológica Nacional, lo que me permite seguir ampliando mis habilidades y conocimientos en el campo de la tecnología."
+},
 
     "mis-habilidades":{
         "titulo__seccion": "Mis habilidades"
